1.0.0: lock